apps/archivers-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivers-fe
  namespace: archivers
  labels:
    app: archivers-fe
spec:
  selector:
    matchLabels:
      app: archivers-fe
  template:
    metadata:
      labels:
        app: archivers-fe
    spec:
      containers:
      - name: archivers-fe
        image: hyeonwoo5342/archivers-fe:7
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '300Mi'
            cpu: '150m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 35
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
